# genmsg

./: .env  .gitignore  .gitignore.cloudflare  CLAUDE.md  COMPARISON.md  Daily_Wife_Message.shortcut  Dockerfile  QUICKSTART-CLOUDFLARE.md  README-CLOUDFLARE.md  WARP.md  agents.md  main.py  package-lock.json  package.json  pyproject.toml  setup-cloudflare.sh  tsconfig.json  vitest.config.ts  wrangler.toml
docs/deployments/: verification-20251012.md
docs/reviews/: claude-review-20251011-2226.md
src/: index.ts
tests/python/: __init__.py  conftest.py  test_api.py
tests/typescript/: worker.test.ts
