[project]
name = "gpt5-nano-fastapi"
version = "0.1.0"
description = "A FastAPI service using GPT-5-nano for text generation"
requires-python = "==3.12.11"
authors = [{name = "Usman Ghani"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "openai>=1.0.0",
    "slowapi>=0.1.9",
]

